# mokumoku

./: devenv.nix
devenv/django/: devenv.nix  pyproject.toml
devenv/django/mysite/: settings.py
devenv/python/: devenv.nix
direnv/: .envrc
direnv/python/: .envrc
nix+direnv/: shell.nix
